--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
             <div class="grid-row" style="margin-bottom:10px;">
                 <div><label>Work Establishment</label>
-                    <input type="text" value="School" readonly>
+                    <input type="text" value="Blatchington Mill School" readonly>
                 </div>
                 <div>
                     <label>Total Hours Worked</label>
@@ -291,7 +291,7 @@
                 <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 10px;">
                     <div>
                         <label>Print Name</label>
-                        <input type="text" value="NAME" readonly style="height: 30px;">
+                        <input type="text" value="Hilary Willmott" readonly style="height: 30px;">
                     </div>
                     <div>
                         <label>Date</label>
@@ -561,4 +561,5 @@
     }
 </script>
 </body>
+
 </html>
